--- a/sourse/style.scss
+++ b/sourse/style.scss
@@ -76,6 +76,146 @@
             margin: 0 2px;
 		}
 }
+
+.number {
+    font-family: "Montserrat","Arial",sans-serif;
+    font-size: 18px;
+    padding: 0px 5px;
+    
+}
+.main {
+    background: #13baba5e;
+
+		&__content {
+            max-width: 1000px;
+
+            margin: 0px auto;
+            padding: 20px 30px 0;
+            display: flex;
+            justify-content: space-around;
+		}
+
+		&__text {
+            flex: 1 0 50%;
+            display: flex;
+            flex-flow: column;
+            margin: 30px 0 0 0 ;
+		}
+
+		&__h1 {
+            
+            font-size: 30px;
+            color: #503b56;
+            font-weight: 800;
+            text-align: center;
+            text-shadow: 2px 2px 20px #199e9e;
+
+		}
+
+		&__description {
+            font-size: 20px;
+            line-height: 25px;
+            margin: 40px 0 0 0;
+            color: #fff;
+            text-shadow: 2px 2px 10px #000;
+		}
+
+		&__img {
+            flex: 0 1 50%;
+            overflow: hidden;
+            height: 400px;
+            margin: -5px 0 0 0;
+            display: flex;
+            justify-content: center;
+
+            
+            img {
+                
+                
+                height: 100%;
+                object-fit: contain;
+                
+
+            }
+		}
+}
+
+.about {
+    padding: 15px;
+    &__title {
+        font-size: 30px;
+            color: #503b56;
+            font-weight: 800;
+            text-align: center;
+            text-shadow: 2px 2px 20px #199e9e;
+    }
+
+    &__container {
+        display: flex;
+        max-width: 1000px;
+        margin: 20px auto;
+        // min-height: 300px;
+    }
+
+    &__img {
+        position: relative;
+        flex: 0 0 30%;
+        display: flex;
+        justify-content: center;
+        min-height: 300px;
+        img {
+            position: absolute;
+        height: 100%;
+    }}
+
+    &__body {
+        display: flex;
+        flex-direction: column;
+    }
+    &__text {
+        font-size: 20px;
+        line-height: 25px;
+        margin: 10px 0 0 0;
+        color: #199e9e;
+        text-shadow: 2px 2px 10px #199e9e;
+
+    }
+    &__sertificat {
+        margin: 10px 0 0 0;
+ 
+    }
+}
+
+.sertificat {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+        flex: 1 0 150px;
+
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background: #13baba;
+
+    &__text {
+        text-align: center;
+        color: #fff;
+    }
+}
+
+
+
+
 @media (max-width: 700px){
 
     .header {
@@ -128,68 +268,37 @@
                 background: #fff;
             }
     }
-}
+    .main {
 
-.number {
-    font-family: "Montserrat","Arial",sans-serif;
-    font-size: 18px;
-    padding: 0px 5px;
-    
-}
-.main {
-    background: #13baba5e;
+        &__text{
+            margin: 0 ;
+            position: relative;
 
-		&__content {
-            max-width: 1000px;
-
-            margin: 0px auto;
-            padding: 20px 30px 0;
-            display: flex;
-            justify-content: space-around;
-		}
-
-		&__text {
-            flex: 1 0 50%;
-            display: flex;
-            flex-flow: column;
-            margin: 30px 0 0 0 ;
-		}
-
-		&__h1 {
-            
-            font-size: 30px;
-            font-weight: 600;
-            color: #503b56;
-            font-weight: 800;
-            text-align: center;
-            text-shadow: 2px 2px 20px #199e9e;
-
-		}
-
-		&__description {
-            font-size: 20px;
-            line-height: 25px;
-            margin: 40px 0 0 0;
-            color: #fff;
-            text-shadow: 2px 2px 10px #000;
-		}
-
-		&__img {
-            flex: 0 1 50%;
-            overflow: hidden;
-            height: 400px;
-            margin: -5px 0 0 0;
-            display: flex;
-            justify-content: center;
-
-            
-            img {
-                
-                
+            &:after{
+                content: "";
+                background: url(../img/main__doctor.png) 50% 0/cover no-repeat;
+                position: absolute;
+                width: 100%;
                 height: 100%;
-                object-fit: contain;
-                
-
+                z-index: -1;
+                opacity: 0.4;
             }
-		}
+        }
+
+        &__description{
+            margin: 10px 0 20px;
+        }
+        &__content{
+            justify-content: center;
+        }
+        &__text{
+            flex: 1 1 100%;
+        }
+        &__img{
+            display: none;
+           
+        }
+    }
+
+
 }
